cmake_minimum_required(VERSION 3.23 FATAL_ERROR)

add_executable(ctest_write_chunk test_write_chunk.c)
add_executable(ctest_line_counter test_line_counter.c)
add_executable(ctest_memory_allocator test_memory_allocator.c)

target_link_libraries(ctest_write_chunk PRIVATE clox_lib)
target_link_libraries(ctest_line_counter PRIVATE clox_lib)
target_link_libraries(ctest_memory_allocator PRIVATE clox_lib)

add_test(ctest_write_chunk ctest_write_chunk)
add_test(ctest_line_counter ctest_line_counter)
add_test(ctest_memory_allocator ctest_memory_allocator)